EmpathyNewChatroom: Fix comment to correspond to the reality

The comments where out of sync with the en COL_* enum.

https://bugzilla.gnome.org/show_bug.cgi?id=698742